@@ -5,31 +5,31 @@
 
 package org.opensearch.sql.ast.tree;
 
+import com.google.common.collect.ImmutableList;
 import java.util.List;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.ToString;
 import org.opensearch.sql.ast.AbstractNodeVisitor;
-import org.opensearch.sql.ast.Node;
 import org.opensearch.sql.ast.expression.Field;
 
+@Getter
 @ToString
 @RequiredArgsConstructor
 public class Flatten extends UnresolvedPlan {
-
   private UnresolvedPlan child;
 
   @Getter private final Field field;
 
   @Override
-  public UnresolvedPlan attach(UnresolvedPlan child) {
+  public Flatten attach(UnresolvedPlan child) {
     this.child = child;
     return this;
   }
 
   @Override
-  public List<? extends Node> getChild() {
-    return child == null ? List.of() : List.of(child);
+  public List<UnresolvedPlan> getChild() {
+    return ImmutableList.of(child);
   }
 
   @Override
